--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -17,6 +17,7 @@ html {
 	scroll-behavior: smooth;
 	overflow-y: auto;
 	overflow-x: hidden;
+	-webkit-text-size-adjust: 100%;
 }
 
 html,
@@ -32,6 +33,7 @@ body {
 	font-size: 1.8rem;
 	font-weight: 400;
 	line-height: 1.7;
+	margin: 0;
 	overflow-y: auto;
 	overflow-x: hidden;
 }
@@ -140,6 +142,7 @@ dfn,
 cite,
 em,
 i {
+	font-size: inherit;
 	font-style: italic;
 }
 
@@ -195,6 +198,7 @@ figure {
 img {
 	max-width: 100%;
 	height: auto;
+	font-style: none;
 }
 
 hr {
@@ -204,6 +208,14 @@ hr {
 
 a {
 	color: inherit;
+}
+
+// IE fixes
+template {
+	display: none;
+}
+[hidden] {
+	display: none;
 }
 
 :where( p, li ) a {
