--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -19,6 +19,48 @@
 	color: var( --wp--preset--color--grey );
 }
 
+// iOS / Safari fix
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+	-webkit-appearance: button;
+}
+
+// Firefox fix
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+	border-style: none;
+	padding: 0;
+}
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+	outline: 1px dotted ButtonText;
+}
+
+// Chrome fix
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+	height: auto;
+}
+
+// Chrome/Safari fix
+[type="search"] {
+	-webkit-appearance: textfield;
+	outline-offset: -2px;
+}
+[type="search"]::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+::-webkit-file-upload-button {
+	-webkit-appearance: button;
+	font: inherit;
+}
+
 form {
 	fieldset {
 		border: none;
@@ -40,9 +82,10 @@ form {
 	textarea,
 	button {
 		appearance: none;
+		font-size: 100%;
+		line-height: 1.6;
 		width: 100%;
 		padding: 1.0rem 2.0rem 0.8rem;
-		line-height: 1.6;
 		margin: 0.5rem 0;
 		border: 1px solid var( --wp--preset--color--grey );
 		&:focus {
@@ -50,6 +93,7 @@ form {
 			border-color: var( --wp--preset--color--orange );
 		}
 	}
+	
 	input[type=text],
 	input[type=search],
 	input[type=number],
@@ -64,6 +108,7 @@ form {
 	}
 	
 	textarea {
+		overflow: auto;
 		resize: vertical;
 		border-radius: var( --border-radius );
 	}
