--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,8 +23,9 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	width: 100%;
 	height: 100%;
+	width: calc( 1.2 * var( --content-width ) );
+	max-width: calc( 100vw - 2 * var( --content-gutter ) );
 }
 
 #header__logo-link {
@@ -79,7 +80,7 @@
 	z-index: 465; // above overlay and menu
 	display: none;
 	visibility: hidden;
-	@include responsive( sm ) {
+	@media not all and ( min-width: 959px ) {
 		display: block;
 		visibility: visible;
 	}
@@ -137,7 +138,7 @@ body.header-menu--visible #header__nav-link span:nth-child( 3 ) {
 ********** HEADER MENU *************
 ***********************************/
 
-@media( max-width: 959px ) {
+@media not all and ( min-width: 959px ) {
 
 	#header-menu__container {
 		position: fixed;
@@ -230,7 +231,7 @@ body.header-menu--visible #header__nav-link span:nth-child( 3 ) {
 	
 }
 
-@media( min-width: 960px ) {
+@media( min-width: 959px ) {
 	
 	#header-menu__container {
 		flex-shrink: 0;
